# Fusionpbx-Plugins

./: .gitignore  .gitmodules  .vercelignore  CNAME  generate-og.js  index.html  register.html  robots.txt  tmp_provision.html  vercel.json
.claude/: settings.json  settings.local.json
api/: proxy.js
billing/: app_config.php  app_defaults.php  app_languages.php  app_menu.php  app_permissions.php  billing.php  billing_credits.php  billing_cron.php  billing_gateway_edit.php  billing_gateways.php  billing_invoice_view.php  billing_invoices.php  billing_notice_template_edit.php  billing_notice_templates.php  billing_pay.php  billing_payments.php  billing_plan_edit.php  billing_plans.php  billing_subscription_edit.php  billing_subscriptions.php  billing_webhook.php
css/: register.css  styles.css
dialer_provision/: app_config.php  app_defaults.php  app_menu.php  app_permissions.php  dialer_provision.php
domain_wizard/: REGISTRATION_GUIDE.md  app_config.php  app_defaults.php  app_languages.php  app_menu.php  app_permissions.php  domain_wizard.php  domain_wizard_create.php  (+3 more)
erpnext_integration/frappe_app/: README.md  pyproject.toml  setup.py
erpnext_integration/frappe_app/fusionpbx_integration/: api.py  hooks.py  modules.txt
erpnext_integration/frappe_app/fusionpbx_integration/fixtures/: custom_field.json
erpnext_integration/frappe_app/fusionpbx_integration/fusionpbx_integration/doctype/fusionpbx_settings/: fusionpbx_settings.json  fusionpbx_settings.py
erpnext_integration/frappe_app/fusionpbx_integration/public/js/: fusionpbx_integration.js
js/: main.js
(+87 files in other folders)
